--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ NEXT_PUBLIC_BUYMARKBEER=true
 #NEXT_PUBLIC_ENVIRONMENT=mainnet-beta
 #NEXT_PUBLIC_RPC=https://solana-mainnet.rpc.extrnode.com
 NEXT_PUBLIC_MICROLAMPORTS=1001
+#pnpm install react-icons && pnpm run build
