--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Enter the Candy Machine Address below
-NEXT_PUBLIC_CANDY_MACHINE_ID=HPmCAnNifBvPoRywqhZ9DBQMmGPFRqUzTQPHetTdQfPp
+NEXT_PUBLIC_CANDY_MACHINE_ID=5yAmPGKCHGdc5JMe6gWDET3fjp5QKU4n4wC1KAQ5a9uq
 # Show box to choose how many NFTs to mint.
 NEXT_PUBLIC_MULTIMINT=true
 NEXT_PUBLIC_MAXMINTAMOUNT=15
 # Is provided to you by the ui when initializing
-NEXT_PUBLIC_LUT=4xWgRei8eLWzVRXcJ9CoMTbbtzssQEQwb8SeN3qV7eTq
+NEXT_PUBLIC_LUT=
 NEXT_PUBLIC_ENVIRONMENT=devnet
 NEXT_PUBLIC_RPC=https://staging-rpc.dev2.eclipsenetwork.xyz
 NEXT_PUBLIC_BUYMARKBEER=FALSE
